Добавлен хендлер для пагинации. Добавлена соответсвующая логика работы.
