# app/alertservice/docs/swagger.yaml
@@ -201,6 +201,33 @@ paths:
       summary: Get alert by ID
       tags:
       - alerts
+  /api/v1/alerts/list:
+    get:
+      description: Вернет список алертов отсортированных по времени начиная с begin
+        в колличестве count
+      parameters:
+      - description: Starting alert index
+        in: query
+        name: begin
+        required: true
+        type: integer
+      - description: Number of alerts
+        in: query
+        name: count
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Alert'
+            type: array
+      summary: Получение списка алертов
+      tags:
+      - alerts
   /api/v1/incidents:
     get:
       description: Retrieve a list of incidents
